--- a/index.html
+++ b/index.html
@@ -14,10 +14,25 @@
     h1 {
       color: #333;
     }
+    .button {
+      display: inline-block;
+      padding: 10px 20px;
+      margin: 20px 0;
+      background-color: #4CAF50;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+    }
+    .button:hover {
+      background-color: #45a049;
+    }
   </style>
 </head>
 <body>
   <h1>Welcome to My Personal Website</h1>
   <p>This is a simple webpage hosted on GitHub Pages.</p>
+  
+  <!-- Button to View Resume -->
+  <a href="resume.html" class="button">Resume</a>
 </body>
 </html>
