--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Personal Website</title>
+  <title>Arati Zade - Software Engineer</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -11,13 +11,29 @@
       text-align: center;
       padding: 50px;
     }
-    h1 {
+    h1, h2, h3 {
       color: #333;
+    }
+    .profile-container {
+      max-width: 800px;
+      margin: 0 auto;
+      text-align: left;
+    }
+    .profile-container p {
+      line-height: 1.6;
+    }
+    .badge {
+      background-color: #4CAF50;
+      color: white;
+      padding: 5px 10px;
+      border-radius: 10px;
+      margin-right: 5px;
+      font-size: 14px;
     }
     .button {
       display: inline-block;
       padding: 10px 20px;
-      margin: 20px 0;
+      margin-top: 20px;
       background-color: #4CAF50;
       color: white;
       text-decoration: none;
@@ -29,10 +45,42 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to My Personal Website</h1>
-  <p>This is a simple webpage hosted on GitHub Pages.</p>
-  
-  <!-- Button to View Resume -->
-  <a href="resume.html" class="button">Resume</a>
+
+  <h1>Arati Zade</h1>
+  <p><strong>@Arati Zade</strong> - A Software Engineer, Integration Developer & Lifelong Learner with over 1.9 years of experience. Currently working at Ambit Software, based in Pune, Maharashtra.</p>
+
+  <!-- Skills and Badges -->
+  <div class="profile-container">
+    <h2>Skills & Badges</h2>
+    <span class="badge">Software Engineering</span>
+    <span class="badge">Life Long Learner</span>
+    <span class="badge">Integration Developer</span>
+    <span class="badge">Web Developer</span>
+    <span class="badge">Professional</span>
+    <span class="badge">Software Developer</span>
+  </div>
+
+  <!-- Bio Description -->
+  <div class="profile-container">
+    <h2>About Me</h2>
+    <p>Arati, a skilled Software Engineer from Pune, Maharashtra, brings over 1.9 years of experience to their role at Ambit Software. With a passion for continuous learning and professional growth, Arati has selected badges such as Professional, Life Long Learner, and Software Engineering to showcase their dedication to their craft. Their commitment to self-improvement and mastery in the field makes them a valuable asset to any team.</p>
+  </div>
+
+  <!-- Open to -->
+  <div class="profile-container">
+    <h3>I'm open to:</h3>
+    <ul>
+      <li>Mentoring</li>
+      <li>Partnering on side projects</li>
+      <li>Brainstorming</li>
+    </ul>
+  </div>
+
+  <!-- Resume Button -->
+  <a href="resume.html" class="button">View Resume</a>
+
+  <footer>
+    <p>Arati Zade | @arti_zade | Pune, Maharashtra</p>
+  </footer>
 </body>
 </html>
