--- a/index.html
+++ b/index.html
@@ -19,13 +19,6 @@
       background-color: #f0f0f0;
       border-bottom: 1px solid #ddd;
     }
-    .profile-header img {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      margin-bottom: 20px;
-      object-fit: cover;
-    }
     .profile-header h1 {
       font-size: 48px;
       margin: 0;
@@ -93,9 +86,8 @@
 </head>
 <body>
 
-  <!-- Profile Header Section with Profile Picture -->
+  <!-- Profile Header Section -->
   <div class="profile-header">
-    <img src="Profile.jpeg" alt="Profile Picture">
     <h1>Arati Zade</h1>
     <p>Software Engineer, Integration Developer & Lifelong Learner with over 1.9 years of experience.<br>
     Currently working at Ambit Software, based in Pune, Maharashtra.</p>
