--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
       background-color: #f0f0f0;
       border-bottom: 1px solid #ddd;
     }
+    .profile-header img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+      object-fit: cover;
+    }
     .profile-header h1 {
       font-size: 48px;
       margin: 0;
@@ -86,8 +93,9 @@
 </head>
 <body>
 
-  <!-- Profile Header Section -->
+  <!-- Profile Header Section with Profile Picture -->
   <div class="profile-header">
+    <img src="C:/Users/arti zade/Downloads/Profile.jpeg" alt="Profile Picture">
     <h1>Arati Zade</h1>
     <p>Software Engineer, Integration Developer & Lifelong Learner with over 1.9 years of experience.<br>
     Currently working at Ambit Software, based in Pune, Maharashtra.</p>
@@ -124,10 +132,4 @@
   <!-- Resume Button -->
   <a href="resume.html" class="resume-button">View Resume</a>
 
-  <!-- Footer Section -->
-  <div class="footer">
-    <p>Arati Zade | @arti_zade | Pune, Maharashtra</p>
-  </div>
-
-</body>
-</html>
+  <!-- 
