--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <!-- Profile Header Section with Profile Picture -->
   <div class="profile-header">
-    <img src="C:/Users/arti zade/Downloads/Profile.jpeg" alt="Profile Picture">
+    <img src="C:/Downloads/Profile.jpeg" alt="Profile Picture">
     <h1>Arati Zade</h1>
     <p>Software Engineer, Integration Developer & Lifelong Learner with over 1.9 years of experience.<br>
     Currently working at Ambit Software, based in Pune, Maharashtra.</p>
