--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
       flex-wrap: wrap;
       margin: 20px 0;
     }
+      .profile-pic {
+      width: 150px; /* Adjust as needed */
+      height: 150px; /* Adjust as needed */
+      border-radius: 50%; /* Makes the image circular */
+      object-fit: cover; /* Ensures the image fits the circle */
+    }
     .badge {
       background-color: #0073e6;
       color: white;
