--- a/index.html
+++ b/index.html
@@ -3,69 +3,116 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Arati Zade - Software Engineer</title>
+  <title>Profile Page</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
-      text-align: center;
-      padding: 50px;
-    }
-    h1, h2, h3 {
+      background-color: #f7f7f7;
+      margin: 0;
+      padding: 0;
       color: #333;
-    }
-    .profile-container {
-      max-width: 800px;
-      margin: 0 auto;
-      text-align: left;
-    }
-    .profile-container p {
-      line-height: 1.6;
-    }
-    .badge {
-      background-color: #4CAF50;
-      color: white;
-      padding: 5px 10px;
-      border-radius: 10px;
-      margin-right: 5px;
-      font-size: 14px;
-    }
-    .button {
-      display: inline-block;
-      padding: 10px 20px;
-      margin-top: 20px;
-      background-color: #4CAF50;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-    }
-    .button:hover {
-      background-color: #45a049;
-    }
-    .profile-picture {
-      width: 150px;
-      height: 150px;
-      border-radius: 50%;
-      object-fit: cover;
     }
     .profile-header {
       text-align: center;
-      margin-bottom: 30px;
+      padding: 50px 20px;
+      background-color: #0073e6;
+      color: white;
+      border-bottom: 5px solid #005bb5;
+    }
+    .profile-header img {
+      width: 180px;
+      height: 180px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+      object-fit: cover;
+    }
+    .profile-header h1 {
+      font-size: 48px;
+      margin: 0;
+    }
+    .profile-header p {
+      font-size: 18px;
+      color: #d1e0f0;
+    }
+    .badges-container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin: 20px 0;
+    }
+    .badge {
+      background-color: #005bb5;
+      color: white;
+      padding: 8px 15px;
+      border-radius: 20px;
+      font-size: 14px;
+      margin: 5px;
+    }
+    .about-section, .experience-section, .education-section, .open-to-section {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+    .section-title {
+      font-size: 28px;
+      margin-bottom: 15px;
+      color: #0073e6;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 10px;
+    }
+    .about-section p, .experience-section p, .education-section p, .open-to-section p {
+      font-size: 16px;
+      line-height: 1.6;
+      color: #666;
+    }
+    .experience-section, .education-section {
+      margin-top: 20px;
+    }
+    .open-to-section ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    .open-to-section li {
+      font-size: 16px;
+      margin-bottom: 8px;
+    }
+    .resume-button {
+      display: block;
+      text-align: center;
+      background-color: #0073e6;
+      color: white;
+      padding: 12px 25px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-size: 18px;
+      margin: 40px auto 0 auto;
+      width: 200px;
+    }
+    .footer {
+      text-align: center;
+      padding: 20px;
+      font-size: 14px;
+      color: #999;
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
 
-  <!-- Profile Section -->
+  <!-- Profile Header Section with Profile Picture -->
   <div class="profile-header">
-    <img src="Profile.jpeg" alt="Arati Zade" class="profile-picture">
+    <img src="Profile.jpeg" alt="Profile Picture">
     <h1>Arati Zade</h1>
-    <p><strong>@arti_zade</strong> - A Software Engineer, Integration Developer & Lifelong Learner with over 1.9 years of experience. Currently working at Ambit Software, based in Pune, Maharashtra.</p>
+    <p>Software Engineer, Integration Developer & Lifelong Learner with over 1.9 years of experience.<br>
+    Currently working at Ambit Software, based in Pune, Maharashtra.</p>
   </div>
 
-  <!-- Skills and Badges -->
-  <div class="profile-container">
-    <h2>Skills & Badges</h2>
+  <!-- Badges Section -->
+  <div class="badges-container">
     <span class="badge">Software Engineering</span>
     <span class="badge">Life Long Learner</span>
     <span class="badge">Integration Developer</span>
@@ -74,26 +121,39 @@
     <span class="badge">Software Developer</span>
   </div>
 
-  <!-- Bio Description -->
-  <div class="profile-container">
-    <h2>About Me</h2>
-    <p>Arati, a skilled Software Engineer from Pune, Maharashtra, brings over 1.9 years of experience to their role at Ambit Software. With a passion for continuous learning and professional growth, Arati has selected badges such as Professional, Life Long Learner, and Software Engineering to showcase their dedication to their craft. Their commitment to self-improvement and mastery in the field makes them a valuable asset to any team.</p>
+  <!-- About Section -->
+  <div class="about-section">
+    <h2 class="section-title">About Me</h2>
+    <p>
+      Arati, a skilled Software Engineer from Pune, Maharashtra, brings over 1.9 years of experience to their role at Ambit Software. With a passion for continuous learning and professional growth, Arati has selected badges such as Professional, Life Long Learner, and Software Engineering to showcase their dedication to their craft. Their commitment to self-improvement and mastery in the field makes them a valuable asset to any team.
+    </p>
   </div>
 
-  <!-- Work Experience -->
-  <div class="profile-container">
-    <h2>Work Experience</h2>
-    <p><strong>Jun 2022 - Present</strong></p>
-    <p>Trainee Software Developer, Ambit Software</p>
-    <p><strong>Nov 2020 - Aug 2022</strong></p>
-    <p>Master of Computer Application, Shri Hanuman Vyayam Prasarak Mandal DCPE, Amravati</p>
-    <p><strong>Aug 2016 - May 2019</strong></p>
-    <p>Bachelor of Computer Science, Adarsh Science College, Dhamangaon Rly.</p>
+  <!-- Work Experience Section -->
+  <div class="experience-section">
+    <h2 class="section-title">Work Experience</h2>
+    <p>
+      <strong>Jun 2022 - Present</strong><br>
+      Trainee Software Developer, Ambit Software
+    </p>
   </div>
 
-  <!-- Open to -->
-  <div class="profile-container">
-    <h3>I'm open to:</h3>
+  <!-- Education Section -->
+  <div class="education-section">
+    <h2 class="section-title">Education</h2>
+    <p>
+      <strong>Nov 2020 - Aug 2022</strong><br>
+      Master of Computer Application, Shri Hanuman Vyayam Prasarak Mandal DCPE, Amravati
+    </p>
+    <p>
+      <strong>Aug 2016 - May 2019</strong><br>
+      Bachelor of Computer Science, Adarsh Science College, Dhamangaon Rly.
+    </p>
+  </div>
+
+  <!-- Open To Section -->
+  <div class="open-to-section">
+    <h2 class="section-title">I'm open to:</h2>
     <ul>
       <li>Mentoring</li>
       <li>Partnering on side projects</li>
@@ -102,10 +162,11 @@
   </div>
 
   <!-- Resume Button -->
-  <a href="resume.html" class="button">View Resume</a>
+  <a href="resume.html" class="resume-button">View Resume</a>
 
-  <footer>
-    <p>Arati Zade | @arti_zade | Pune, Maharashtra</p>
-  </footer>
+  <div class="footer">
+    &copy; 2024 Arati Zade. All rights reserved.
+  </div>
+
 </body>
 </html>
