--- a/resume.html
+++ b/resume.html
@@ -7,29 +7,48 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
+      background-color: #e9f5fb; /* Lighter background */
+      color: #333; /* Dark text for readability */
       text-align: center;
       padding: 50px;
     }
     h1 {
-      color: #333;
+      color: #007BFF; /* Light blue for the main title */
     }
     .resume-section {
       text-align: left;
       max-width: 600px;
       margin: 0 auto;
+      background-color: #ffffff; /* White background for the resume section */
+      padding: 20px;
+      border-radius: 8px; /* Rounded corners */
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Subtle shadow for depth */
+    }
+    h2 {
+      color: #0056b3; /* Darker blue for section headings */
+    }
+    h3 {
+      color: #007BFF; /* Light blue for subsection headings */
+    }
+    ul {
+      list-style-type: none; /* Remove default list styling */
+      padding: 0; /* Remove padding */
+    }
+    li {
+      margin-bottom: 10px; /* Spacing between list items */
     }
     .back-button {
       display: inline-block;
       padding: 10px 20px;
       margin-top: 20px;
-      background-color: #4CAF50;
+      background-color: #007BFF; /* Light blue button */
       color: white;
       text-decoration: none;
       border-radius: 5px;
+      transition: background-color 0.3s; /* Smooth transition */
     }
     .back-button:hover {
-      background-color: #45a049;
+      background-color: #0056b3; /* Darker blue on hover */
     }
   </style>
 </head>
